--- a/Front-end/app/src/main/res/values/colors.xml
+++ b/Front-end/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorCrimson">#DC143C</color>
+    <color name="colorLawnGreen">#7CFC00</color>
+    <color name="colorOrangeRed">#FF4500</color>
 </resources>
