Update class namings, http post working for json string

--- a/Front-end/app/src/main/res/layout/activity_debug_test.xml
+++ b/Front-end/app/src/main/res/layout/activity_debug_test.xml
@@ -32,5 +32,11 @@
             android:id="@+id/test_page_continue"
             android:text="@string/Continue_text"/>
 
+        <Button
+            android:id="@+id/test_upload_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="upload" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
