--- a/Front-end/app/src/main/res/layout/activity_init.xml
+++ b/Front-end/app/src/main/res/layout/activity_init.xml
@@ -12,7 +12,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:id="@+id/init_linear_layout">
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
@@ -32,14 +33,12 @@
             android:layout_gravity="center_horizontal"
             />
 
-        <Button
-            android:id="@+id/registerButton"
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Register"
             android:layout_marginTop="40dp"
-            android:layout_gravity="center_horizontal"
-            />
+            android:layout_gravity="center"/>
 
         <Button
             android:id="@+id/test_page_button"
