--- a/Front-end/app/src/main/res/layout/activity_init.xml
+++ b/Front-end/app/src/main/res/layout/activity_init.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".InitActivity"
-    android:background="@drawable/math">
+    android:background="@drawable/math"
+    android:id="@+id/init_constraint_layout">
 
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/init_linear_layout">
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/WelcomeStr"
+            android:text="@string/welcome_str"
             android:textColor="#FFFFFF"
             android:textSize="30sp"
             android:layout_marginTop="40dp"
@@ -28,7 +29,7 @@
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/Login"
+            android:text="@string/LOGIN"
             android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
             />
@@ -51,9 +52,11 @@
 
     </LinearLayout>
 
-
-
-
-
+    <RelativeLayout
+        android:id="@+id/init_relative_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
