--- a/Front-end/app/src/main/res/layout/activity_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz.xml
@@ -55,7 +55,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:id="@+id/quiz_page_submit_button"
-                android:text="@string/submit"/>
+                android:text="@string/SUBMIT"/>
         </LinearLayout>
     </RelativeLayout>
 
