--- a/Front-end/app/src/main/res/layout/activity_init.xml
+++ b/Front-end/app/src/main/res/layout/activity_init.xml
@@ -11,6 +11,7 @@
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
