Refactor code, add wrong/correct answer notification

--- a/Front-end/app/src/main/res/anim/rotate_close_anim.xml
+++ b/Front-end/app/src/main/res/anim/rotate_close_anim.xml
@@ -3,10 +3,9 @@
     android:fillAfter="true">
 
     <rotate
+        android:duration="300"
         android:fromDegrees="45"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toDegrees="0"
-        android:duration="300"
-        />
+        android:toDegrees="0" />
 </set>
