--- a/Front-end/app/src/main/res/values/colors.xml
+++ b/Front-end/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorCrimson">#DC143C</color>
     <color name="colorLawnGreen">#7CFC00</color>
     <color name="colorOrangeRed">#FF4500</color>
+    <color name="colorAqua">#00FFFF</color>
 </resources>
