--- a/Front-end/app/src/main/res/anim/rotate_open_anim.xml
+++ b/Front-end/app/src/main/res/anim/rotate_open_anim.xml
@@ -2,10 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true">
     <rotate
+        android:duration="300"
         android:fromDegrees="0"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:toDegrees="45"
-        android:duration="300"
-        />
+        android:toDegrees="45" />
 </set>
