--- a/Front-end/app/src/main/res/anim/to_bottom_anim.xml
+++ b/Front-end/app/src/main/res/anim/to_bottom_anim.xml
@@ -3,21 +3,21 @@
     android:fillAfter="true">
 
     <translate
+        android:duration="300"
         android:fromYDelta="0%"
-        android:toYDelta="100%"
-        android:duration="300"/>
+        android:toYDelta="100%" />
 
     <scale
-        android:pivotX="50%"
-        android:pivotY="50%"
         android:fromXScale="0.8"
         android:fromYScale="0.8"
+        android:pivotX="50%"
+        android:pivotY="50%"
         android:toXScale="1"
-        android:toYScale="1"/>
+        android:toYScale="1" />
 
     <alpha
+        android:duration="800"
         android:fromAlpha="1"
-        android:toAlpha="0"
-        android:duration="800"/>
+        android:toAlpha="0" />
 
 </set>
