--- a/Front-end/app/src/main/res/layout-v21/fragment_quiz_teacher.xml
+++ b/Front-end/app/src/main/res/layout-v21/fragment_quiz_teacher.xml
@@ -1,75 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainMenuFragments.QuizFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/teacher_quiz_fragment_debug_text"
-            />
+            android:text="@string/teacher_quiz_fragment_debug_text" />
+
         <Button
+            android:id="@+id/quiz_fragment_go_to_quiz_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/quiz_fragment_go_to_quiz_button"
             android:text="@string/go_to_quiz"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
-        android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/colorPrimary"
-        android:tint="@color/common_google_signin_btn_tint"
-        app:srcCompat="@drawable/ic_baseline_add_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:clickable="true"
         android:focusable="true"
-         />
+        android:tint="@color/common_google_signin_btn_tint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/edit_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
-        android:layout_margin="@dimen/fab_margin"
-        android:tint="@color/common_google_signin_btn_tint"
-        app:srcCompat="@drawable/ic_baseline_edit_24"
-        app:layout_constraintBottom_toTopOf="@id/fab"
-        app:layout_constraintEnd_toEndOf="parent"
         android:clickable="false"
         android:focusable="true"
+        android:tint="@color/common_google_signin_btn_tint"
         android:visibility="invisible"
-        />
+        app:layout_constraintBottom_toTopOf="@id/fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_edit_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/note_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
         android:layout_marginEnd="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="24dp"
-        android:layout_margin="@dimen/fab_margin"
-        android:tint="@color/common_google_signin_btn_tint"
-        app:srcCompat="@drawable/ic_baseline_notes_24"
-        app:layout_constraintBottom_toTopOf="@id/edit_fab"
-        app:layout_constraintEnd_toEndOf="parent"
         android:clickable="false"
         android:focusable="true"
+        android:tint="@color/common_google_signin_btn_tint"
         android:visibility="invisible"
-        />
+        app:layout_constraintBottom_toTopOf="@id/edit_fab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_baseline_notes_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
