--- a/Front-end/app/src/main/res/layout/activity_debug_test.xml
+++ b/Front-end/app/src/main/res/layout/activity_debug_test.xml
@@ -1,36 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/test_page_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/test_page_view">
+        android:orientation="vertical">
+
         <Button
+            android:id="@+id/test_page_take_photo_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/take_picture"
-            android:id="@+id/test_page_take_photo_button"
-            />
+            android:text="@string/take_picture" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/preview"
             android:gravity="center"
-            />
+            android:text="@string/preview" />
+
         <ImageView
+            android:id="@+id/test_image"
             android:layout_width="match_parent"
             android:layout_height="100sp"
             android:layout_marginTop="20dp"
-            android:id="@+id/test_image"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp" />
+
         <Button
+            android:id="@+id/test_page_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/test_page_continue"
-            android:text="@string/Continue_text"/>
+            android:text="@string/Continue_text" />
 
         <Button
             android:id="@+id/test_upload_button"
