--- a/Front-end/app/src/main/res/layout/activity_init.xml
+++ b/Front-end/app/src/main/res/layout/activity_init.xml
@@ -2,54 +2,53 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/init_constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitActivity"
     android:background="@drawable/math"
-    android:id="@+id/init_constraint_layout">
+    tools:context=".InitActivity">
 
 
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        app:layout_constraintTop_toTopOf="parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/init_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:id="@+id/init_linear_layout">
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome_str"
-            android:textColor="#FFFFFF"
-            android:textSize="30sp"
             android:layout_marginTop="40dp"
             android:gravity="center"
-            />
+            android:text="@string/welcome_str"
+            android:textColor="#FFFFFF"
+            android:textSize="30sp" />
+
         <Button
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/LOGIN"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="40dp"
+            android:text="@string/LOGIN" />
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp" />
 
         <Button
             android:id="@+id/test_page_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/test"
-            android:layout_marginTop="40dp"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="40dp"
+            android:text="@string/test" />
 
     </LinearLayout>
 
@@ -57,7 +56,6 @@
         android:id="@+id/init_relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
-    </RelativeLayout>
+        app:layout_constraintBottom_toBottomOf="parent"></RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
