--- a/Front-end/app/src/main/res/layout/activity_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz.xml
@@ -1,37 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/quiz_page_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/quiz_page_view">
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="200dp">
+
                 <LinearLayout
+                    android:id="@+id/question_stack"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/question_stack"
                     android:orientation="vertical">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/question"
-                        android:textSize="20sp"/>
+                        android:textSize="20sp" />
                 </LinearLayout>
             </ScrollView>
+
             <LinearLayout
+                android:id="@+id/center_stack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/center_stack"
                 android:orientation="vertical">
 
             </LinearLayout>
@@ -43,19 +47,22 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="20dp"
             android:orientation="vertical">
+
             <TextView
+                android:id="@+id/quiz_page_info_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:id="@+id/quiz_page_info_label"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textAlignment="center" />
+
             <Button
+                android:id="@+id/quiz_page_submit_button"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
-                android:id="@+id/quiz_page_submit_button"
-                android:text="@string/SUBMIT"/>
+                android:text="@string/SUBMIT" />
         </LinearLayout>
     </RelativeLayout>
 
