--- a/Front-end/app/src/main/res/layout/activity_quiz_finished.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz_finished.xml
@@ -1,41 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerVertical="true">
+            android:layout_centerVertical="true"
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:text="@string/finish_quiz_text"
-                android:textSize="20dp"
                 android:textAlignment="center"
-                android:gravity="center_horizontal" />
+                android:textSize="20dp" />
+
             <TextView
+                android:id="@+id/quiz_finished_page_response"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="You got 3/3 correct! congratulations!"
-                android:textSize="12dp"
-                android:textAlignment="center"
                 android:gravity="center_horizontal"
-                android:id="@+id/quiz_finished_page_response"/>
+                android:text="You got 3/3 correct! congratulations!"
+                android:textAlignment="center"
+                android:textSize="12dp" />
         </LinearLayout>
 
         <Button
+            android:id="@+id/quiz_finished_page_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="10dp"
-            android:id="@+id/quiz_finished_page_button"
-            android:text="@string/back_to_main_menu"/>
+            android:text="@string/back_to_main_menu" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
