--- a/Front-end/app/src/main/res/layout/fragment_quiz.xml
+++ b/Front-end/app/src/main/res/layout/fragment_quiz.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".MainMenuFragments.QuizFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/quiz_fragment_debug_text"
-            />
+            android:text="@string/quiz_fragment_debug_text" />
+
         <Button
+            android:id="@+id/quiz_fragment_go_to_quiz_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/quiz_fragment_go_to_quiz_button"
             android:text="@string/go_to_quiz"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
