setup/add first class function implemented in front-end, code cleaned up

--- a/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
+++ b/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
@@ -17,6 +17,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/class_statistic_debug_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/class_statistic_page_text1" />
