--- a/Front-end/app/src/main/res/layout/activity_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz.xml
@@ -53,8 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:textSize="20sp"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/quiz_page_submit_button"
