--- a/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
+++ b/Front-end/app/src/main/res/layout/fragment_class_statistic.xml
@@ -31,7 +31,7 @@
         </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/teacher_class_switch_fab"
+            android:id="@id/class_switch_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
