refactor strings. uuid implemented, upload implemented for user info

--- a/Front-end/app/src/main/res/layout/fragment_profile.xml
+++ b/Front-end/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/USERNAME"
+                    android:text="@string/UI_username"
                     android:textSize="20sp" />
                 <ImageButton
                     android:id="@+id/profile_username_change_btn"
@@ -56,7 +56,7 @@
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:text="@string/EXAMPLE_EMAIL"
+                    android:text="@string/UI_example_email"
                     android:textSize="20sp" />
 
                 <ImageButton
