String source better organized, code refactored.

--- a/Front-end/app/src/main/res/layout/activity_home.xml
+++ b/Front-end/app/src/main/res/layout/activity_home.xml
@@ -10,8 +10,8 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
@@ -24,46 +24,47 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/class_switch_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/class_switch_fab"
+        android:layout_gravity="bottom"
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginBottom="24dp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_gravity="bottom"
         app:layout_anchorGravity="bottom"
         app:srcCompat="@drawable/ic_baseline_add_24"
         tools:ignore="VectorDrawableCompat" />
 
     <HorizontalScrollView
+        android:id="@+id/class_scroll_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:id="@+id/class_scroll_view"
         android:layout_gravity="top"
-        app:layout_anchor="@id/class_switch_fab"
-        android:layout_marginBottom="10dp"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp">
+        android:layout_marginLeft="24dp"
+        android:layout_marginBottom="10dp"
+        android:visibility="invisible"
+        app:layout_anchor="@id/class_switch_fab">
+
         <LinearLayout
+            android:id="@+id/class_scroll_linear_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/class_scroll_linear_layout">
+            android:orientation="horizontal">
 
             <ImageButton
+                android:id="@+id/add_class_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/add_class_button"
-                android:src="@drawable/ic_baseline_add_24"
-                android:contentDescription="@string/add_class" />
+                android:contentDescription="@string/UI_add_class"
+                android:src="@drawable/ic_baseline_add_24" />
 
         </LinearLayout>
 
