--- a/Front-end/app/src/main/res/layout/activity_init.xml
+++ b/Front-end/app/src/main/res/layout/activity_init.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:gravity="center"
-            android:text="@string/welcome_str"
+            android:text="@string/UI_welcome_str"
             android:textColor="#FFFFFF"
             android:textSize="30sp" />
 
