--- a/Front-end/app/src/main/res/layout/activity_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_quiz.xml
@@ -26,7 +26,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/question"
+                        android:text="@string/UI_question"
                         android:textSize="20sp" />
                 </LinearLayout>
             </ScrollView>
@@ -61,7 +61,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
-                android:text="@string/SUBMIT" />
+                android:text="@string/UI_submit" />
         </LinearLayout>
     </RelativeLayout>
 
