--- a/Front-end/app/src/main/res/values/colors.xml
+++ b/Front-end/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorLawnGreen">#7CFC00</color>
     <color name="colorOrangeRed">#FF4500</color>
     <color name="colorAqua">#00FFFF</color>
+    <color name="colorGolden">#FFCC00</color>
 </resources>
