--- a/Front-end/app/src/main/res/layout/activity_create_quiz.xml
+++ b/Front-end/app/src/main/res/layout/activity_create_quiz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizActivities.CreateQuizActivity">
+    tools:context=".quizActivities.CreateQuizActivity">
 
     <ScrollView
         android:id="@+id/scrollView2"
