--- a/Front-end/app/src/main/res/layout/fragment_quiz.xml
+++ b/Front-end/app/src/main/res/layout/fragment_quiz.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mainMenuFragments.QuizFragment">
+    tools:context=".mmf.QuizFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
